--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-tilt": "^0.1.4",
     "react-toastify": "^7.0.4",
     "react-use-gesture": "^9.1.3",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
