--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.17",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-tilt": "^0.1.4",
     "react-toastify": "^7.0.4",
     "react-use-gesture": "^9.1.3",
     "web-vitals": "^1.0.1",
